fix: app-main overflow during error message animation

--- a/src/components/app-main/app-main.module.css
+++ b/src/components/app-main/app-main.module.css
@@ -3,4 +3,5 @@
   justify-content: center;
   min-height: 0;
   flex-grow: 1;
+  overflow: hidden;
 }
